Fixed Dropdown not showing on first click

--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,6 @@ nav button {
     width: 100px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    display: none;
     z-index: 1;
 }
 
